--- a/App.config
+++ b/App.config
@@ -1,17 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
+  <appSettings>
+    <add key="test" value="MyApplication" />
+    <add key="clientId" value="841908b2b41c493fbea7789d0135e0d9" />
+    <add key="secret" value="11cabebf97194f36898e1c0544c56752" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.3.1.0" newVersion="4.3.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <appSettings>
-    <add key="test" value="MyApplication" />
-  </appSettings>
 </configuration>
