--- a/App.config
+++ b/App.config
@@ -9,10 +9,15 @@
     <add key="secret" value="11cabebf97194f36898e1c0544c56752" />
   </appSettings>
   <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+    
+  <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+  <dependentAssembly>
+    <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-4.3.1.0" newVersion="4.3.1.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <assemblyIdentity name="SharpYaml" publicKeyToken="1ced8108e942bc02" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-1.2.0.29887" newVersion="1.2.0.29887" />
+  </dependentAssembly>
+</assemblyBinding></runtime>
 </configuration>
