--- a/OAuth2InstagramClient.fsproj
+++ b/OAuth2InstagramClient.fsproj
@@ -61,7 +61,12 @@
     <Content Include="packages.config" />
     <None Include="Script1.fsx" />
     <None Include="oauth.secret" />
-    <Content Include="App1.config" />
+    <None Include=".paket\paket.bootstrapper.exe" />
+    <None Include=".gitignore" />
+    <None Include="paket.dependencies" />
+    <None Include="paket.lock" />
+    <None Include="paket.references" />
+    <None Include="analysis.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Configuration">
@@ -103,4 +108,15 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <Choose>
+    <When Condition="($(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.0' Or $(TargetFrameworkVersion) == 'v4.5' Or $(TargetFrameworkVersion) == 'v4.5.1' Or $(TargetFrameworkVersion) == 'v4.5.2' Or $(TargetFrameworkVersion) == 'v4.5.3' Or $(TargetFrameworkVersion) == 'v4.6')) Or ($(TargetFrameworkIdentifier) == 'MonoAndroid') Or ($(TargetFrameworkIdentifier) == 'MonoTouch')">
+      <ItemGroup>
+        <Reference Include="Suave.Experimental">
+          <HintPath>packages\Suave.Experimental\lib\net40\Suave.Experimental.dll</HintPath>
+          <Private>True</Private>
+          <Paket>True</Paket>
+        </Reference>
+      </ItemGroup>
+    </When>
+  </Choose>
 </Project>
